package main

import (
	"context"
	"database/sql"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"
	"time"

	_ "github.com/go-sql-driver/mysql"
	"github.com/joho/godotenv"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	"metargb/commercial-service/internal/handler"
	"metargb/commercial-service/internal/parsian"
	"metargb/commercial-service/internal/repository"
	"metargb/commercial-service/internal/service"
	"metargb/shared/pkg/auth"
)

func main() {
	// Load environment variables
	if err := godotenv.Load(); err != nil {
		log.Printf("Warning: .env file not found: %v", err)
	}

	// Database connection
	dsn := fmt.Sprintf("%s:%s@tcp(%s:%s)/%s?parseTime=true&charset=utf8mb4&collation=utf8mb4_unicode_ci",
		getEnv("DB_USER", "root"),
		getEnv("DB_PASSWORD", ""),
		getEnv("DB_HOST", "localhost"),
		getEnv("DB_PORT", "3306"),
		getEnv("DB_DATABASE", "metargb_db"),
	)

	db, err := sql.Open("mysql", dsn)
	if err != nil {
		log.Fatalf("Failed to connect to database: %v", err)
	}
	defer db.Close()

	// Configure connection pool
	db.SetMaxOpenConns(25)
	db.SetMaxIdleConns(5)
	db.SetConnMaxLifetime(5 * time.Minute)

	// Test connection
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	if err := db.PingContext(ctx); err != nil {
		log.Fatalf("Failed to ping database: %v", err)
	}
	log.Println("Successfully connected to database")

	// Initialize repositories
	walletRepo := repository.NewWalletRepository(db)
	orderRepo := repository.NewOrderRepository(db)
	transactionRepo := repository.NewTransactionRepository(db)
	paymentRepo := repository.NewPaymentRepository(db)
	firstOrderRepo := repository.NewFirstOrderRepository(db)
	variableRepo := repository.NewVariableRepository(db)
	userVariableRepo := repository.NewUserVariableRepository(db)
	referralOrderRepo := repository.NewReferralRepository(db)

	// Initialize Parsian client
	parsianClient := parsian.NewClient()

	// Initialize helper services
	jalaliConverter := service.NewJalaliConverter()

	// Initialize order policy
	orderPolicy := service.NewOrderPolicy(firstOrderRepo)

	// Initialize referral service
	referralService := service.NewReferralService(
		referralOrderRepo,
		variableRepo,
		userVariableRepo,
		walletRepo,
	)

	// Payment configuration
	paymentConfig := &service.PaymentConfig{
		ParsianMerchantID:            getEnv("PARSIAN_PIN", ""),
		ParsianLoanAccountMerchantID: getEnv("PARSIAN_LOAN_ACCOUNT_PIN", ""),
		ParsianCallbackURL:           getEnv("PAYMENT_CALLBACK_URL", "http://localhost:8000/api/v2/payment/callback"),
	}

	// Initialize services
	walletService := service.NewWalletService(walletRepo)
	transactionService := service.NewTransactionService(transactionRepo, jalaliConverter)
	paymentService := service.NewPaymentService(
		orderRepo,
		transactionRepo,
		paymentRepo,
		walletRepo,
		firstOrderRepo,
		variableRepo,
		parsianClient,
		referralService,
		orderPolicy,
		jalaliConverter,
		paymentConfig,
	)

	// Initialize token validator for authentication
	// Connect to auth service for token validation
	authServiceAddr := getEnv("AUTH_SERVICE_ADDR", "auth-service:50051")
	authConn, err := grpc.Dial(authServiceAddr, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Printf("Warning: Failed to connect to auth service - authentication disabled: %v", err)
	} else {
		defer authConn.Close()
		log.Printf("Connected to auth service at %s", authServiceAddr)
	}

	// Create token validator using auth service
	var tokenValidator auth.TokenValidator
	if authConn != nil {
		tokenValidator = auth.NewAuthServiceTokenValidator(authConn)
	}

	// Build gRPC server options with interceptors
	var serverOpts []grpc.ServerOption
	if tokenValidator != nil {
		serverOpts = append(serverOpts, grpc.UnaryInterceptor(auth.UnaryServerInterceptor(tokenValidator)))
	}

	// Create gRPC server
	grpcServer := grpc.NewServer(serverOpts...)

	// Register handlers
	handler.RegisterWalletHandler(grpcServer, walletService)
	handler.RegisterTransactionHandler(grpcServer, transactionService)
	handler.RegisterPaymentHandler(grpcServer, paymentService)

	// Start gRPC server
	port := getEnv("GRPC_PORT", "50052")
	listener, err := net.Listen("tcp", ":"+port)
	if err != nil {
		log.Fatalf("Failed to listen on port %s: %v", port, err)
	}

	log.Printf("Commercial service listening on port %s", port)

	// Graceful shutdown
	go func() {
		if err := grpcServer.Serve(listener); err != nil {
			log.Fatalf("Failed to serve: %v", err)
		}
	}()

	// Wait for interrupt signal
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	log.Println("Shutting down server...")
	grpcServer.GracefulStop()
	log.Println("Server stopped")
}

func getEnv(key, defaultValue string) string {
	if value := os.Getenv(key); value != "" {
		return value
	}
	return defaultValue
}
